--- a/style.css
+++ b/style.css
@@ -1,86 +1,64 @@
 html {
-    font-family: sans-serif;
-    background-color: #eee;
-    text-align: center;
+  background-color: #f5f5f5;
+  text-align: center;
 }
 
 body {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 h1 {
-    margin: 50px auto;
+  color: #444444;
+  font-family: "Libre Franklin", sans-serif;
+  font-size: 50px;
+  margin: 50px auto;
 }
 
 ul {
-    list-style-type: none;
-    width: 650px;
-    height: 50px;
-    margin: 50px auto;
-    padding: 0px;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  width: 550px;
+  margin: 50px auto;
+  padding: 0;
 }
 
 li {
-    float: left;
-    margin-left: 50px;
+  font-size: 50px;
 }
 
 a {
-    width: 50px;
-    height: 50px;
-    display: block;
-    background-image: url('icons.png');
-    background-repeat: no-repeat;
-    font-size: 0;
+  color: #000000;
+  text-decoration: none;
 }
 
-#email {
-    background-position: 0px 0px;
+a span {
+  display:none;
 }
 
-#email:hover {
-    background-position: 0px -50px;
+.email:hover {
+  color: #e93e30;
 }
 
-#facebook {
-    background-position: -50px 0px;
+.facebook:hover {
+  color: #3b579d;
 }
 
-#facebook:hover {
-    background-position: -50px -50px;
+.twitter:hover {
+  color: #5ea9dd;
 }
 
-#twitter {
-    background-position: -100px 0px;
+.linkedin:hover {
+  color: #0077b5;
 }
 
-#twitter:hover {
-    background-position: -100px -50px;
+.github:hover {
+  color: #464442;
 }
 
-#linkedin {
-    background-position: -150px 0px;
-}
-
-#linkedin:hover {
-    background-position: -150px -50px;
-}
-
-#github {
-    background-position: -200px 0px;
-}
-
-#github:hover {
-    background-position: -200px -50px;
-}
-
-#blog {
-    background-position: -250px 0px;
-}
-
-#blog:hover {
-    background-position: -250px -50px;
+.blog:hover {
+  color: #0085be;
 }
